   property was set to null before deleting the file, possibly causing it to
   remain there until the JVM terminated.
 o Completely synchronized access to cancelPending and endOfResponse in TdsCore
   and cancelPending and responseOwner in SharedSocket. This should prevent any
   race conditions when a cancel() is issued.
 o Applied the rest of Mike's fix for bug [1152329] Spurious output params 
   assigned (TIMESTMP). Missed part of it when doing the merge.

02/27/2005 - Alin Sinpalean
 o Enhanced update count caching implementation by always caching update counts
   up to the end of the response or beginning of the first ResultSet (whichever
   comes first) whenever the end of the current ResultSet is reached. This
   means it's no longer necessary to call getMoreResults() after the last
   ResultSet returned by a CallableStatement to get to the output parameters.
   Also removed the readAhead flag, which caused the rest of the response to
   be dumped when the end of the first ResultSet was reached for a
   CallableStatement.executeQuery.
 o Corrected a problem in SQLParser causing an error message with the wrong
   terminator value missing (i.e. ')' instead of '}' missing from
   "{call proc(?)").
 o Corrected a problem with output parameters being defined as Unicode even
   though sendStringParametersAsUnicode=false was specified.
 o Applied Mike's fix for bug [1152329] Spurious output params assigned
   (TIMESTMP). WRITETEXT and UPDATETEXT commands generate spurious output
   parameter packets, which interfere with the real output parameters. Fix
   ignores output parameters with names not beginning with '@'.
 o Synchronized all accesses to the cancelPending flag, to fix any possible
   issues caused by race conditions.

02/25/2005 - Alin Sinpalean
 o Added code to close the socket and release any data buffered at the socket
   level when Connection.setClosed() is called (usually on I/O or protocol
   errors).