@@ -12,8 +12,10 @@ Changes from jTDS 1.0.2
  o Completely synchronized access to cancelPending and endOfResponse in TdsCore
    and cancelPending and responseOwner in SharedSocket. This should prevent any
    race conditions when a cancel() is issued.
- o Applied the rest of Mike's fix for bug [1152329] Spurious output params 
+ o Applied the rest of Mike's fix for bug [1152329] Spurious output params
    assigned (TIMESTMP). Missed part of it when doing the merge.
+ o Added FAQ entry about Sybase batching, as discussed in bug report [1123350]
+   Hang when executing performance test.
 
 02/27/2005 - Alin Sinpalean
  o Enhanced update count caching implementation by always caching update counts
